Fixed styling for tables on smaller devices bunq/doc#56

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -44,6 +44,14 @@ body {
             td {
                 white-space: normal;
                 word-break: break-word;
+
+                &:first-of-type {
+                    word-break: normal;
+
+                    @media (min-width: $viewport-width-small) {
+                        white-space: nowrap;
+                    }
+                }
             }
         }
     }
