--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -46,6 +46,11 @@ $color-disabled: #EBEBEB;
 $color-link: #0080FF;
 
 /**
+ * Viewports
+ */
+$viewport-width-small: 576px;
+
+/**
  * Assets
  */
 $asset-rainbow: url("../assets/images/ribbon.png");
